--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
     <meta name="description" content="Welcome to my personal page!">
     <link rel="icon" href="assets/favicon.png">
     <link rel="apple-touch-icon" href="assets/apple.png">
