stack page optimized for smaller screens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="main-container">
-        <div id="home">
+        <div id="home" style="display: none;">
 <pre id="home-letter">
 _____/\\\\\\\\\\\___        
  ___/\\\/////////\\\_       
@@ -65,7 +65,7 @@ _____/\\\\\\\\\\\___
                 </div>
             </div>
         </div>
-        <div id="stack" style="display: none;">
+        <div id="stack">
             <div id="carousel-container">
                 <button id="carousel-prev"><span>&lt;</span></button>
                 <div class="panel">
