added starry background

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="/Styles/header.css">
     <link rel="stylesheet" href="/Styles/projects.css">
     <link rel="stylesheet" href="/Styles/stack.css">
+    <link rel="stylesheet" href="Styles/star.css">
     <link rel="icon" type="image/png" href="Assets/favicon-96x96.png" sizes="96x96"/>
     <link rel="shortcut icon" href="Assets/favicon.ico"/>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png"/>
     <title>Portfolio</title>
 </head>
-<body>
+<body style="overflow-x: hidden;">
     <div id="header">
         <div>
             <h1>Simon M.</h1>
@@ -180,8 +181,10 @@
     <footer id="footer">
         <a href="https://github.com/SimonXVB" target="_blank">GitHub</a>
     </footer>
+    <div id="sky"></div>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
     </style>
+    <script src="sky.js"></script>
 </body>
 </html>
