updated project image

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
             <div class="project-container">
                 <div class="project-top">
-                    <img src="Assets/css.png" alt="CSS">
+                    <img src="Assets/CSS-Shen.png" alt="CSS">
                     <div>
                         <a class="title" href="https://github.com/SimonXVB/CSS-Shenanigans" target="_blank">
                             <span>CSS-Shenanigans</span>
