moved sky.js to canvas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Styles/header.css">
     <link rel="stylesheet" href="Styles/projects.css">
     <link rel="stylesheet" href="Styles/stack.css">
-    <link rel="stylesheet" href="Styles/star.css">
+    <link rel="stylesheet" href="Styles/sky.css">
     <link rel="stylesheet" href="Styles/style.css">
     <link rel="stylesheet" href="Styles/about.css">
     <link rel="icon" type="image/png" href="/Favicon/favicon-96x96.png" sizes="96x96"/>
@@ -45,10 +45,6 @@
         <div class="stack-container">
             <h1>Technologies</h1>
             <div class="language-container">
-                <div class="entry intersect">
-                    <img src="Assets/js.png" alt="JS" class="roundedJS">
-                    <p>JavaScript</p>
-                </div>
                 <div class="entry intersect">
                     <img src="Assets/ts.png" alt="TS">
                     <p>TypeScript</p>
@@ -195,7 +191,7 @@
     <footer id="footer">
         <a href="https://github.com/SimonXVB" target="_blank">GitHub</a>
     </footer>
-    <div id="sky"></div>
+    <canvas id="sky"></canvas>
     <script src="sky.js"></script>
     <script src="intersectionObserver.js"></script>
 </body>
